--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "index.js"
     ],
     "dependencies": {
+        "@iwavesmedia/semantic-release-composer": "^1.0.0",
         "@semantic-release/changelog": "^6.0.3",
         "@semantic-release/exec": "^6.0.3",
         "@semantic-release/git": "^10.0.1",
