--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "@semantic-release/changelog": "^6.0.3",
         "@semantic-release/exec": "^6.0.3",
         "@semantic-release/git": "^10.0.1",
-        "conventional-changelog-conventionalcommits": "^7.0.2"
+        "conventional-changelog-conventionalcommits": "^7.0.2",
+        "semantic-release-yarn": "^3.0.2"
     },
     "peerDependencies": {
         "semantic-release": ">=23.0.0"
