--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/HDNET/semantic-release-config.git"
+    "url": "https://bitbucket.org:hdnet/semantic-release-config.git"
   },
   "main": "index.js",
   "files": [
