--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,12 @@ Thumbs.db
 dist/
 
 .hdnet
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
