ci: Set correct registry

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,6 +2,6 @@ nodeLinker: node-modules
 
 npmAuthToken: '${CODEARTIFACT_AUTH_TOKEN:-}'
 
-npmPublishRegistry: 'https://hdnet-262788382628.d.codeartifact.eu-central-1.amazonaws.com/npm/hdnet-npm/'
+npmPublishRegistry: 'https://hdnet-262788382628.d.codeartifact.eu-central-1.amazonaws.com/npm/hdnet/'
 
 compressionLevel: 0
